--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,14 +2,18 @@ ext{
     versions = [
             springBoot          : "2.6.3",
             postgresql          : "42.3.2",
-            lombok              : "1.18.22"
+            lombok              : "1.18.22",
+            openapi             : "1.6.5"
     ]
+
 
     libs = [
             springBootWeb         : "org.springframework.boot:spring-boot-starter-web:$versions.springBoot",
             springDataJpa         : "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBoot",
             springDataMongoDb     : "org.springframework.boot:spring-boot-starter-data-mongodb:$versions.springBoot",
+            springValidation      : "org.springframework.boot:spring-boot-starter-validation:$versions.springBoot",
             postgresql            : "org.postgresql:postgresql:$versions.postgresql",
-            lombok                : "org.projectlombok:lombok:$versions.lombok"
+            lombok                : "org.projectlombok:lombok:$versions.lombok",
+            openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi"
     ]
 }
