--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,8 @@ ext{
             springBoot          : "2.6.3",
             postgresql          : "42.3.2",
             lombok              : "1.18.22",
-            openapi             : "1.6.5"
+            openapi             : "1.6.5",
+            mapstruct           : "1.4.2.Final"
     ]
 
 
@@ -12,8 +13,11 @@ ext{
             springDataJpa         : "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBoot",
             springDataMongoDb     : "org.springframework.boot:spring-boot-starter-data-mongodb:$versions.springBoot",
             springValidation      : "org.springframework.boot:spring-boot-starter-validation:$versions.springBoot",
+
             postgresql            : "org.postgresql:postgresql:$versions.postgresql",
             lombok                : "org.projectlombok:lombok:$versions.lombok",
-            openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi"
+            openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
+            mapstruct             : "org.mapstruct:mapstruct:$versions.mapstruct",
+            mapstructProcessor    : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
     ]
 }
