--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,14 @@ allprojects {
         }
     }
     dependencies {
-        implementation  libs.springBootWeb
-        implementation  libs.lombok
+        implementation      libs.springBootWeb
+        implementation      libs.lombok
         annotationProcessor libs.lombok
-        implementation  libs.springDataJpa
-        implementation  libs.springValidation
-        implementation  libs.openapi
+
+        implementation      libs.springValidation
+        implementation      libs.openapi
+        implementation      libs.mapstruct
+        annotationProcessor      libs.mapstructProcessor
     }
 }
 configurations {
