--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8090
+
+spring:
+  data:
+    mongodb:
+      database: socialmedia
+      username: gulukaluser
+      password: 'root'
+      host: localhost
+      port: 27000
