--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,10 @@ allprojects {
         implementation  libs.springBootWeb
         implementation  libs.lombok
         annotationProcessor libs.lombok
-        implementation  libs.springDataJpa
         implementation  libs.springValidation
         implementation  libs.openapi
+        implementation  libs.mapstruct
+        annotationProcessor  libs.mapstructProcessor
     }
 }
 configurations {
