openfeign dependencies has been added

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ allprojects {
         implementation  libs.openapi
         implementation  libs.mapstruct
         annotationProcessor  libs.mapstructProcessor
+        implementation  libs.springOpenFeign
     }
 }
 configurations {
