--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,8 @@ ext{
             postgresql          : "42.3.2",
             lombok              : "1.18.22",
             openapi             : "1.6.5",
-            mapstruct           : "1.4.2.Final"
+            mapstruct           : "1.4.2.Final",
+            springCloud         : "3.1.0",
     ]
     libs = [
             springBootWeb         : "org.springframework.boot:spring-boot-starter-web:$versions.springBoot",
@@ -16,5 +17,6 @@ ext{
             openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
             mapstruct             : "org.mapstruct:mapstruct:$versions.mapstruct",
             mapstructProcessor    : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
+            springOpenFeign       : "org.springframework.cloud:spring-cloud-starter-openfeign:$versions.springCloud",
     ]
 }
